# poetry_analysis

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: api_epiphora.md  demo.ipynb  index.md  requirements.txt
src/poetry_analysis/: alliteration.py  anaphora.py  epiphora.py  rhyme_detection.py  utils.py
tests/: conftest.py
tests/alliteration/: test_find_line_alliterations.py
tests/anaphora/: test_extract_anaphora.py  test_extract_line_anaphora.py  test_extract_poem_anaphora.py  test_find_longest_most_frequent_anaphora.py
tests/epiphora/: test_extract_epiphora.py
tests/utils/: test_extract_repeated_substrings.py  test_shared_substrings.py  test_utils.py
